--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,8 +6,6 @@
         "dbatools.search",
         "ms-windows-ai-studio.windows-ai-studio",
         "ms-dotnettools.dotnet-interactive-vscode",
-        "rooveterinaryinc.roo-cline",
-        "github.copilot-chat",
-        "github.copilot"
+        "rooveterinaryinc.roo-cline"
     ]
 }
